# thag_rs

./: +7659  .bashrc  .gitignore  .vale.ini  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_REVIEW.md  HYBRID_THEMING_SUMMARY.md  IMAGE_THEME_GENERATION.md  IMAGE_THEME_SUMMARY.md  LICENSE.md  MULTI_FORMAT_THEME_EXPORT.md  PHASE1_STYLING_IMPROVEMENTS.md  RAPID_ITERATION_RENAME.md  README.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_v1.0.0.md  RELEASE_COMMANDS.md  RELEASE_OVERVIEW.md  RELEASE_PLAN.md  RELEASE_README.md  RELEASE_STATUS.md  RELEASE_STRATEGY_v1.md  RELEASE_SUMMARY.md  RELEASE_v1_SUMMARY.md  SHARED_TARGET_CACHE.md  SHARED_TARGET_COMPLETION.md  SHARED_TARGET_IMPLEMENTATION.md  SHARED_TARGET_QUICKREF.md  SHARED_TARGET_SUMMARY.md  TESTING_WORKFLOW.md  THEME_AWARE_INQUIRE_FIXED.md  THEME_EXPORT_QUICK_REFERENCE.md  TODO.md  Thag_Profiling_User_Guide.md  VIDEO_DEMO.md  (+52 more)
.cargo/build_run/: Cargo.toml  cargo_source.rs  my_generated_program.rs  source.rs
bank/proc_macros/: Cargo.toml  README.md  attrib_key_map_list.rs  attribute_basic.rs  const_demo.rs  const_demo_grail.rs  const_gen_str_demo.rs  custom_model.rs  expander_demo.rs  host_port_const.rs  lib.rs  organizing_code_const.rs
demo/proc_macros/: Cargo.toml  OVERVIEW.md  README.md  README_REFINED.md  ansi_code_derive.rs  attribute_basic.rs  cached.rs  category_enum.rs  compile_time_assert.rs  const_demo.rs  const_demo_grail.rs  derive_builder.rs  derive_constructor.rs  derive_deserialize_vec.rs  derive_display.rs  derive_doc_comment.rs  derive_getters.rs  derive_key_map_list.rs  env_or_default.rs  expander_demo.rs  file_navigator.rs  generate_tests.rs  host_port_const.rs  into_string_hash_map.rs  lib.rs  load_static_map.rs  macros_doc.rs  my_description.rs  my_proc.rs  organizing_code.rs  organizing_code_const.rs  organizing_code_tokenstream.rs  repeat_dash.rs  retry.rs  timing.rs
src/proc_macros/: Cargo.toml  ansi_code_derive.rs  category_enum.rs  const_proc_macro.rs  custom_model.rs  deserialize_vec_derive.rs  enable_profiling.rs  file_navigator.rs  generate_theme_types.rs  hash_mapify.rs  key_map_list.rs  key_map_list_attrib.rs  key_map_list_derive.rs  key_map_list_derive2.rs  lib.rs  palette_methods.rs  preload_themes.rs  profile.rs  profile_develop.rs  repeat_dash.rs  tool_errors.rs  tui_keys.rs
thag_common/: Cargo.toml  README.md
thag_common/src/: config.rs  help_system.rs  lib.rs  lib_instr.rs  terminal.rs
thag_core/: Cargo.toml  dep_sizes.txt
thag_core/src/: config.rs  error.rs  lib.rs  logging.rs  macros.rs  profiling.rs  shared.rs
thag_demo/: Cargo.toml  Cargo_alt.toml  ENV_VARS_EXAMPLE.md  README.md  USAGE_IMPROVEMENTS.md  install_and_demo.sh
thag_demo/demos/: async_profiling.rs  basic_profiling.rs  benchmark.rs  comparison.rs  comparison_after.rs  comparison_before.rs  differential_comparison.rs  display_viz.rs  flamegraph.rs  interactive_profiling.rs  memory_profiling.rs  minimal_recursion_test.rs  test_recursion.rs  time_profiling.rs
thag_demo/src/: main.rs  main_alt.rs  viz.rs
thag_demo/wix/: main.wxs
thag_proc_macros/: Cargo.toml  LICENSE-MIT  README.md  build.rs
thag_proc_macros/src/: ansi_code_derive.rs  ansi_styling_support.rs  category_enum.rs  debug_log.rs  enable_profiling.rs  end.rs  file_navigator.rs  fn_name.rs  internal_doc.rs  lib.rs  palette_methods.rs  preload_themes.rs  profile.rs  profile_block.rs  profile_fn.rs  profiled.rs  safe_alloc.rs  safe_alloc_private.rs  safe_alloc_tls.rs  safe_print.rs  styled.rs  timing.rs  tool_errors.rs  tui_keys.rs
thag_profiler/: BALANCED_APPROACH.md  CLAUDE.md  Cargo.toml  DOCUMENTATION_STRATEGY.md  LICENSE-APACHE  Makefile  README.md  README_BALANCED.md  debug_instrument.rs  doc_examples.sh  run_tests.sh  svgs.md  verify_docs.sh
thag_profiler/examples/: doc_attributes.rs  memory_profile_test.rs
thag_profiler/src/: errors.rs  interning.rs  lib.rs  logging.rs  mem_alloc.rs  mem_attribution.rs  mem_tracking.rs  okaoka.rs  profiling.rs  profiling_20250325_displays.rs  task_allocator.rs  visualization.rs
thag_profiler/tests/: allocation_test.rs  example_warn_once.rs  profiling.rs  test_enable_profiling.rs  test_enable_profiling_corrected.rs  test_mem_attribution.rs  test_mem_tracking.rs  test_original.rs  test_profile_section.rs  test_profiled_behavior.rs  test_profiling.rs  test_tls_simple.rs  test_tls_vs_global.rs  test_unified_allocator.rs  test_warn_once.rs
thag_profiler/wix/: main.wxs
thag_rs/: Cargo.toml
thag_rs/bank/: any_string.rs  clap_tut_derive_03_enum.rs  concat_arrays.rs  derive_deluxe_gpt.rs  derive_deluxe_gpt_mappings.rs  display_wrapper.rs  downcast_string.rs  factorial_main_rug_product.rs  fib_dijkstra_recursive_gpt_ibig.rs  fib_dijkstra_recursive_rug.rs  fib_doubling_iterative_1.rs  fib_xxx.rs  fibonacci_fn.rs  format_specifiers.rs  from_repl_tui.rs  git_latest_commit_sha_curl.rs  git_latest_commit_sha_reqwest.rs  git_latest_commit_sha_tinyget.rs  greetings.rs  lvl_premap_color.rs  macro_gen_enum_gpt.rs  my_dbg.rs  pretty_trees.rs  proc_macro_const_demo.rs  proc_macro_const_demo_grail.rs  proc_macro_vec_concat.rs  reedline_custom_prompt.rs  syn_file_debug.rs  syn_file_to_expr.rs  termbg_latency_win.rs  test_filepath.rs  thag_regex_expand.rs  time_main.rs  tui_file_dialog.rs  win_test_vt2.rs  win_test_vt3.rs
thag_rs/demo/: analyze_snippet_2.rs  bpaf_cmd_chain.rs  cargo_capture_output.rs  cargo_output.rs  clap_enum_strum.rs  clap_tut_builder_01_quick.rs  clap_tut_derive_04_03_relations.rs  colors.rs  config.rs  count_main_methods.rs  crossbeam_channel_matching.rs  crossbeam_channel_stopwatch.rs  crossterm_event_read.rs  download_demo_dir.rs  duration_snippet.rs  enum_select.rs  fib_basic_ibig.rs  fib_doubling_iterative_ibig.rs  fib_doubling_recursive_ibig.rs  fib_matrix.rs  fib_matrix_ibig.rs  filter_demos.rs  fizz_buzz_blandy_orendorff.rs  gen_names.rs  git_dependency.rs  gpt_lazy_static_theme.rs  history_debug.rs  (+25 more)
thag_styling/: Cargo.toml  INTEGRATION_QUICK_START.md  PALETTE_QUERYING.md  README.md  STYLED_MACRO_GUIDE.md  build.rs  readme_notes.md
(+2132 files in other folders)
