[package]
name = "thag_demo"
version = "0.1.0"
edition = "2021"
authors = ["Don Forbes <don.forbes3@gmail.com>"]
description = "Interactive demos for thag_rs and thag_profiler - run Rust profiling examples without installing thag"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durbanlegend/thag_rs"
readme = "README.md"
keywords = ["demo", "profiling", "rust", "thag", "examples"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
thag_rs = { version = "0.2", path = "../", features = ["build", "simplelog"] }
thag_profiler = { version = "0.1", path = "../thag_profiler" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
inferno = "0.12"
inquire = "0.7"

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
uninlined_format_args = "allow"
