[package]
name = "thag_demo"
version = "0.2.0"
edition = "2021"
authors = ["Don Forbes <don.forbes3@gmail.com>"]
description = "Interactive demos for thag_rs and thag_profiler - run Rust profiling examples without installing thag"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durbanlegend/thag_rs"
readme = "README.md"
keywords = ["demo", "profiling", "rust", "thag", "examples"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
inferno = "0.12"
inquire = "0.9"
shell-words = "1.1"
thag_profiler = { version = "0.1", path = "../thag_profiler" }
thag_rs = { version = "0.2", path = "../", features = [
    "build",
    "color_detect",
    "simplelog",
    "tools",
] }

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
uninlined_format_args = "allow"
