[package]
name = "thag_profiler"
version = "0.1.0"
edition = "2021"
description = "A lightweight, cross-platform Rust code profiling toolkit with zero overhead when disabled"
authors = ["thag_rs developer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/durbanlegend/thag_rs"
keywords = [
    "profiling",
    "performance",
    "flamegraph",
    "instrumentation",
    "tracing",
]
categories = [
    "development-tools::profiling",
    "development-tools",
    "command-line-utilities",
]

[package.metadata.wix]
upgrade-guid = "0C80A2EF-343B-4EA3-BCE0-2985B10A2893"
path-guid = "DB87B3CE-6DCB-436A-85FA-C90A0061C9B3"
license = false
eula = false

[dependencies]
backtrace = "0.3"
chrono = "0.4.39"
dashmap = "6.1.0"
dirs = { version = "6.0", optional = true }
# futures = "0.3.31"
inline_colorization = "0.1.6"
inferno = { version = "0.12.0", optional = true }
inquire = { version = "0.7.5", optional = true }
once_cell = "1.20.3"
parking_lot = { version = "0.12.3", default-features = false }
paste = "1.0.15"
ra_ap_syntax = { version = "0.0.264", optional = true }
regex = { version = "1.11.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
strum = { version = "0.27.1", features = ["derive", "phf"] }
thag_proc_macros = { path = "../thag_proc_macros", default-features = false }

[dev-dependencies]
regex = "1.11.1"
serial_test = { version = "3.2.0", features = ["file_locks"] }
smol = "2.0.2"
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
analyze_tool = [
    "dirs",
    "inferno",
    "inquire",
    "ra_ap_syntax",
    "serde_json",
    "regex/unicode-perl",
]
default = []
time_profiling = ["thag_proc_macros/time_profiling"]
full_profiling = ["time_profiling", "thag_proc_macros/full_profiling"]
debug_logging = ["thag_proc_macros/debug_logging"]
tls_allocator = [
    "thag_proc_macros/tls_allocator",
] # Use thread-local storage for allocator switching
tools = ["analyze_tool", "instrument_tool"] # Enable all tools
instrument_tool = ["ra_ap_syntax"] # Dependencies for instrument

[[bin]]
name = "thag_profile"
path = "src/bin/thag_profile.rs"
required-features = ["analyze_tool"]

[[bin]]
name = "thag_instrument"
path = "src/bin/thag_instrument.rs"
required-features = ["instrument_tool"]

[[bin]]
name = "thag_uninstrument"
path = "src/bin/thag_uninstrument.rs"
required-features = ["instrument_tool"]
